src/main/java/com/example/demo/error/exception/ForbiddenException.java
package com.example.demo.error.exception;


import com.example.demo.error.ErrorCode;

public class ForbiddenException extends BusinessException {

    public ForbiddenException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}
